--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,3 +12,104 @@ img,
 video {
   display: block;
 }
+
+body {
+  background: var(--lavender, #c4d2f5);
+  padding: 100px;
+}
+
+.player {
+  display: flex;
+  width: 440px;
+  padding: 30px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  border-radius: 20px;
+  background: var(--white, #fff);
+  box-shadow: 0px 0px 0px 20px rgba(255, 254, 254, 0.15);
+}
+
+.player-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.player-track-title {
+  color: var(--black, #000);
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.player-track-artist {
+  color: var(--gray, #909090);
+  font-family: Inter;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.player-progress {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  align-self: stretch;
+}
+
+.player-time {
+  color: var(--gray, #909090);
+  font-family: Inter;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.player-progress-bar {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  flex: 1 0 0;
+  border-radius: 3px;
+  background: var(--light-gray, #f6f6ef);
+
+  .player-progress-inner {
+    background: var(--purple, #e783bc);
+    width: 120px;
+    height: 6px;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+  }
+}
+
+.player-time {
+  color: var(--gray, #909090);
+  font-family: Inter;
+  font-size: 15px;
+  font-weight: 700;
+}
+
+.player-button {
+  display: flex;
+  width: 74px;
+  height: 74px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 37px;
+  background: var(--purple, #e783bc);
+
+  .fa-solid {
+    color: var(--white, #fff);
+    font-family: "Font Awesome 6 Free";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+  }
+}
+
+audio {
+  display: none;
+}
